# potr

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs  opts.rs  potr.rs
src/translators/: clear.rs  clone.rs  deepl.rs  mod.rs  openai.rs
tests/: potr_tests.rs
tests/data/: code-block-expected.po  code-block-with-include-regex-expected.po  code-block-with-include-regex-input.po  exclude-regex-expected.po  exclude-regex-input.po  fuzzy-expected.po  fuzzy-filter-expected.po  fuzzy-filter-input.po  fuzzy-input.po  include-regex-expected.po  translated-expected.po  translated-input.po  untranslated-input.po
