[package]
name = "potr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.71"
clap = { version = "4.3.11", features = ["derive", "env"] }
openai-api-rs = "0.1.8"
polib = "0.2.0"
