[package]
name = "potr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10.0"
openai-api-rs = "0.1"
polib = "0.2"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
