[package]
name = "potr"
version = "0.1.0"
authors = ["r12f <r12f.code@gmail.com>"]
edition = "2021"
description = "Command line tool for translating GNU gettext files."
license = "Apache-2.0"
keywords = ["translator", "gettext", "openai", "deepl"]
categories = ["command-line-utilities"]
repository = "https://github.com/r12f/potr"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-openai = "0.12"
async-trait = "0.1"
clap = { version = "4", features = ["derive", "env"] }
ctrlc = "3.4.0"
deepl = "0.4"
env_logger = "0.10.0"
polib = "0.2"
strum = "0.25"
strum_macros = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros", "net", "io-util"] }
tracing = { version = "0.1", features = ["log"] }

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.dev]
panic = "abort"             # Abort on panic to make it more friendly for debugger

[profile.release]
opt-level = 'z'             # Optimize for size.
lto = true                  # Enable link time optimization
codegen-units = 1           # Using 1 codegen units to help getting more optimization on binary size.
panic = 'abort'             # Avoid generating stack unwind code.